2010-05-03  Timothy Baker  <timothypaulbaker@gmail.com> (tiny change)

	* doc/sed.texi (Regular expressions): Fix typo.

2009-11-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/sed.texi (Extended Commands): Document F command.
	* doc/sed-in.texi: Regenerate.
	* sed/compile.c (compile_program): Accept 'F' if not --posix.
	* sed/execute.c (open_next_file): Always initialize in_file_name.
	(execute_program): Handle 'F'.
	* configure.ac: Bump SED_FEATURE_VERSION.
	* NEWS: Update.

2009-12-07  Clint Adams  <schizo@debian.org>  (tiny change)

	* sed/execute.c (open_next_file): If is_selinux_enabled returns -1,
	treat it as "disabled".

2009-10-15  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown): First change owner (while permissions
	stay 0?00), then mode.

2009-10-15  Paolo Bonzini  <bonzini@gnu.org>
	    WANG Yunfeng  <uhuruh@gmail.com>

	* sed/execute.c (str_append, str_append_modified): Handle incomplete
	sequences as if they were invalid.

2009-10-14  Paolo Bonzini  <bonzini@gnu.org>

	* po/sed.pot: Update.

2009-10-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Use cache variables rather than AC_CHECK_FUNC.

2009-10-14  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Remove obselete configure tests.
	* sed/fmt.c: Assume limits.h is always present.
	* sed/utils.c: Assume vfprintf is always present.

2009-10-14  Yuri G. Kudryashov  <urkud.urkud@gmail.com> (tiny change)

	* testsuite/Makefile.tests: Override LC_ALL, not LANG.

2009-10-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/sed-in.texi (Invoking sed): Add index entries for --posix,
	-s, --separate.
	(Other Commands): Fix typo.
	* doc/sed.texi: Regenerate.

2009-09-07  Dmitry Chistikov <dd1email@gmail.com> (tiny change)

	* doc/sed-in.texi: Document how to separate commands.
	* doc/sed.texi: Regenerate.

2009-08-30  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Add ssize_t.
	* configure.ac: Remove useless stuff, bump gettext requirement to 0.17.
