@@ -19,7 +19,7 @@
 # gnulib modules used by this package.
 gnulib_modules="
     acl alloca btowc c-ctype extensions getline getopt gettext localcharset
-    mbrlen mbrtowc mbsinit memchr mkstemp obstack pathmax regex rename
+    mbrlen mbrtowc mbsinit memchr mkostemp obstack pathmax regex rename
     selinux-h stdbool stat-macros ssize_t strerror strverscmp unlocked-io
     verify wcrtomb wctob"
 
