@@ -4,12 +4,15 @@ acl_entries.c
 alloca.c
 alloca.h
 alloca.in.h
+basename-lgpl.c
 basename.c
 btowc.c
 c-ctype.c
 c-ctype.h
+canonicalize-lgpl.c
 config.charset
 copy-acl.c
+dirname-lgpl.c
 dirname.c
 dirname.h
 errno.h
@@ -20,6 +23,7 @@ exitfail.c
 exitfail.h
 file-has-acl.c
 getdelim.c
+getfilecon.c
 getline.c
 getopt.c
 getopt.h
@@ -31,10 +35,15 @@ gettext.h
 gettimeofday.c
 gnulib.mk
 intprops.h
+langinfo.h
+langinfo.in.h
 localcharset.c
 localcharset.h
 lstat.c
 malloc.c
+malloca.c
+malloca.h
+malloca.valgrind
 mbrlen.c
 mbrtowc.c
 mbsinit.c
@@ -42,7 +51,8 @@ memchr.c
 memchr.valgrind
 memcmp.c
 memmove.c
-mkstemp.c
+mkostemp.c
+nl_langinfo.c
 obstack.c
 obstack.h
 pathmax.h
@@ -50,6 +60,7 @@ quote.c
 quote.h
 quotearg.c
 quotearg.h
+readlink.c
 realloc.c
 ref-add.sed
 ref-add.sin
@@ -62,14 +73,19 @@ regex_internal.c
 regex_internal.h
 regexec.c
 rename.c
+rmdir.c
+same-inode.h
 se-context.h
 se-context.in.h
 se-selinux.h
 se-selinux.in.h
 set-mode-acl.c
 stat-macros.h
+stat.c
 stdbool.h
 stdbool.in.h
+stddef.h
+stddef.in.h
 stdint.h
 stdint.in.h
 stdio-write.c
@@ -92,6 +108,8 @@ sys_time.h
 sys_time.in.h
 tempname.c
 tempname.h
+time.h
+time.in.h
 unistd.h
 unistd.in.h
 unlocked-io.h
