@@ -2,15 +2,19 @@
 00gnulib.m4
 acl.m4
 alloca.m4
+asm-underscore.m4
 btowc.m4
+canonicalize.m4
 codeset.m4
 dirname.m4
 dos.m4
 double-slash-root.m4
+eealloc.m4
 errno_h.m4
 error.m4
 exitfail.m4
 extensions.m4
+fcntl-o.m4
 getdelim.m4
 getline.m4
 getopt.m4
@@ -34,6 +38,7 @@ intmax.m4
 inttypes-h.m4
 inttypes-pri.m4
 inttypes_h.m4
+langinfo_h.m4
 lcmessage.m4
 lib-ld.m4
 lib-link.m4
@@ -47,6 +52,7 @@ longdouble.m4
 longlong.m4
 lstat.m4
 malloc.m4
+malloca.m4
 mbrlen.m4
 mbrtowc.m4
 mbsinit.m4
@@ -54,9 +60,11 @@ mbstate_t.m4
 memchr.m4
 memcmp.m4
 memmove.m4
+mkostemp.m4
 mkstemp.m4
 mmap-anon.m4
 multiarch.m4
+nl_langinfo.m4
 nls.m4
 pathmax.m4
 po.m4
@@ -64,15 +72,19 @@ printf-posix.m4
 progtest.m4
 quote.m4
 quotearg.m4
+readlink.m4
 realloc.m4
 regex.m4
 rename.m4
+rmdir.m4
 selinux-context-h.m4
 selinux-selinux-h.m4
 signed.m4
 size_max.m4
 ssize_t.m4
+stat.m4
 stdbool.m4
+stddef_h.m4
 stdint.m4
 stdint_h.m4
 stdio_h.m4
@@ -86,16 +98,20 @@ sys_stat_h.m4
 sys_time_h.m4
 tempname.m4
 threadlib.m4
+time_h.m4
 uintmax_t.m4
 ulonglong.m4
 unistd_h.m4
 unlocked-io.m4
 visibility.m4
+warn-on-use.m4
 wchar.m4
+wchar_h.m4
 wchar_t.m4
 wcrtomb.m4
 wctob.m4
 wctype.m4
+wctype_h.m4
 wint_t.m4
 xalloc.m4
 xsize.m4
