@@ -1,3 +1,12 @@
+2010-07-16  Paolo Bonzini  <bonzini@gnu.org>
+
+	* autoboot.conf (gnulib_modules): Replace mkstemp with mkostemp.
+	* bootstrap.sh.in: Compile mkostemp.c instead of mkstemp.c.
+	* gnulib: Update.
+	* NEWS: Mention change.
+	* sed/utils.c (ck_mkstemp): Use mkostemp to work around Cygwin
+	oddity.  Reported by Stepan Kasal.
+
 2010-05-03  Timothy Baker  <timothypaulbaker@gmail.com> (tiny change)
 
 	* doc/sed.texi (Regular expressions): Fix typo.
